Fix vertical scroll bar
Edit to CSS to remove overflow:hidden which prevents vertical scrollbar

--- a/munroscompleted/leaflet/css/qgis2web.css
+++ b/munroscompleted/leaflet/css/qgis2web.css
@@ -2,9 +2,6 @@
         #map {
             background-color: #ffffff
         }
-        html, body, #map {
-			overflow: hidden;
-        }
         .col9{
 			height: 100%!important;
 		}
